--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,6 +55,7 @@ userNotFoundMessage=User not found.
 incorrectPasswordMessage=Current password is incorrect.
 usernameExistsMessage=New Username already exists.
 invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
+confirmPasswordErrorMessage=New Password and Confirm New Password must match.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Cannot downgrade current user's role
@@ -85,6 +86,7 @@ pipeline.defaultOption=Custom
 pipeline.submitButton=Submit
 pipeline.help=Pipeline Help
 pipeline.scanHelp=Folder Scanning Help
+pipeline.deletePrompt=Are you sure you want to delete pipeline
 
 ######################
 #  Pipeline Options  #
@@ -173,6 +175,8 @@ adminUserSettings.header=Admin User Control Settings
 adminUserSettings.admin=Admin
 adminUserSettings.user=User
 adminUserSettings.addUser=Add New User
+adminUserSettings.deleteUser=Delete User
+adminUserSettings.confirmDeleteUser=Should the user be deleted?
 adminUserSettings.usernameInfo=Username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 adminUserSettings.roles=Roles
 adminUserSettings.role=Role
@@ -186,6 +190,23 @@ adminUserSettings.forceChange=Force user to change password on login
 adminUserSettings.submit=Save User
 adminUserSettings.changeUserRole=Change User's Role
 adminUserSettings.authenticated=Authenticated
+
+
+database.title=Database Import/Export
+database.header=Database Import/Export
+database.fileName=File Name
+database.creationDate=Creation Date
+database.fileSize=File Size
+database.deleteBackupFile=Delete Backup File
+database.importBackupFile=Import Backup File
+database.downloadBackupFile=Download Backup File
+database.info_1=When importing data, it is crucial to ensure the correct structure. If you are unsure of what you are doing, seek advice and support from a professional. An error in the structure can cause application malfunctions, up to and including the complete inability to run the application.
+database.info_2=The file name does not matter when uploading. It will be renamed afterward to follow the format backup_user_yyyyMMddHHmm.sql, ensuring a consistent naming convention.
+database.submit=Import Backup
+database.importIntoDatabaseSuccessed=Import into database successed
+database.fileNotFound=File not found
+database.fileNullOrEmpty=File must not be null or empty
+database.failedImportFile=Failed to import file
 
 #############
 # HOME-PAGE #
@@ -332,6 +353,10 @@ home.certSign.title=Sign with Certificate
 home.certSign.desc=Signs a PDF with a Certificate/Key (PEM/P12)
 certSign.tags=authenticate,PEM,P12,official,encrypt
 
+home.removeCertSign.title=Remove Certificate Sign
+home.removeCertSign.desc=Remove certificate signature from PDF
+removeCertSign.tags=authenticate,PEM,P12,official,decrypt
+
 home.pageLayout.title=Multi-Page Layout
 home.pageLayout.desc=Merge multiple pages of a PDF document into a single page
 pageLayout.tags=merge,composite,single-view,organize
@@ -453,11 +478,11 @@ login.signinTitle=Please sign in
 login.ssoSignIn=Login via Single Sign-on
 login.oauth2AutoCreateDisabled=OAUTH2 Auto-Create User Disabled
 login.oauth2RequestNotFound=Authorization request not found
-login.oauth2AccessDenied=Access Denied
-login.oauth2InvalidTokenResponse=Invalid Token Response
-login.oauth2RequestNotFound=Authorization Request not found
 login.oauth2InvalidUserInfoResponse=Invalid User Info Response
 login.oauth2invalidRequest=Invalid Request
+login.oauth2AccessDenied=Access Denied
+login.oauth2InvalidTokenResponse=Invalid Token Response
+login.oauth2InvalidIdToken=Invalid Id Token
 
 
 #auto-redact
@@ -598,7 +623,7 @@ adjustContrast.download=Download
 
 #crop
 crop.title=Crop
-crop.header=Crop Image
+crop.header=Crop PDF
 crop.submit=Submit
 
 
@@ -655,6 +680,13 @@ certSign.name=Name
 certSign.submit=Sign PDF
 
 
+#removeCertSign
+removeCertSign.title=Remove Certificate Signature
+removeCertSign.header=Remove the digital certificate from the PDF
+removeCertSign.selectPDF=Select a PDF file:
+removeCertSign.submit=Remove Signature
+
+
 #removeBlanks
 removeBlanks.title=Remove Blanks
 removeBlanks.header=Remove Blank Pages
@@ -674,6 +706,8 @@ removeAnnotations.submit=Remove
 #compare
 compare.title=Compare
 compare.header=Compare PDFs
+compare.highlightColor.1=Highlight Color 1: 
+compare.highlightColor.2=Highlight Color 2: 
 compare.document.1=Document 1
 compare.document.2=Document 2
 compare.submit=Compare
@@ -788,6 +822,7 @@ merge.title=Merge
 merge.header=Merge multiple PDFs (2+)
 merge.sortByName=Sort by name
 merge.sortByDate=Sort by date
+merge.removeCertSign=Remove digital signature in the merged file?
 merge.submit=Merge
 
 
@@ -805,6 +840,7 @@ pdfOrganiser.mode.6=Odd-Even Split
 pdfOrganiser.mode.7=Remove First
 pdfOrganiser.mode.8=Remove Last
 pdfOrganiser.mode.9=Remove First and Last
+pdfOrganiser.mode.10=Odd-Even Merge
 pdfOrganiser.placeholder=(e.g. 1,3,2 or 4-8,2,10-12 or 2n-1)
 
 
@@ -965,6 +1001,7 @@ pdfToPDFA.credit=This service uses OCRmyPDF for PDF/A conversion
 pdfToPDFA.submit=Convert
 pdfToPDFA.tip=Currently does not work for multiple inputs at once
 pdfToPDFA.outputFormat=Output format
+pdfToPDFA.pdfWithDigitalSignature=The PDF contains a digital signature. This will be removed in the next step.
 
 
 #PDFToWord
@@ -1058,12 +1095,21 @@ printFile.submit=Print
 
 
 #licenses
-licenses.nav=Licenses
-licenses.title=3rd Party Licenses
-licenses.header=3rd Party Licenses
+licenses.nav=Licences
+licenses.title=3rd Party Licences
+licenses.header=3rd Party Licences
 licenses.module=Module
 licenses.version=Version
-licenses.license=License
+licenses.license=Licence
+
+#survey
+survey.nav=Survey
+survey.title=Stirling-PDF Survey
+survey.description=Stirling-PDF has no tracking so we want to hear from our users to improve Stirling-PDF!
+survey.please=Please consider taking our survey!
+survey.disabled=(Survey popup will be disabled in following updates but available at foot of page)
+survey.button=Take Survey
+survey.dontShowAgain=Don't show again
 
 
 #error
